[package]
name = "rfs_bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs = { path = "../rfs" }

[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"