[package]
name = "rfs_bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cxx = "1.0.82"
lazy_static = "1.4.0"
log = "0.4.17"
mut_static = "5.0.0"
rfs = { path = "../rfs" }

[build-dependencies]
bindgen = "0.63.0"

[lib]
crate-type = ["staticlib", "rlib"]
name = "rfs_bind"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
